--- a/src/main/resources/com/example/csc325/csc325/employeeProfile.fxml
+++ b/src/main/resources/com/example/csc325/csc325/employeeProfile.fxml
@@ -38,6 +38,6 @@
         <TextField fx:id="skill" layoutX="31.0" layoutY="589.0" promptText="Add Skill" />
     </children>
     <stylesheets>
-        <URL value="@style.css" />
+        <URL value="@colors.css" />
     </stylesheets>
 </AnchorPane>
