--- a/src/main/resources/com/example/csc325/csc325/employeeProfile.fxml
+++ b/src/main/resources/com/example/csc325/csc325/employeeProfile.fxml
@@ -22,7 +22,7 @@
                 <Image url="@profile.png" />
             </image>
         </ImageView>
-        <TextArea layoutX="41.0" layoutY="246.0" prefHeight="108.0" prefWidth="628.0" promptText="About me" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+        <TextArea fx:id="about" layoutX="41.0" layoutY="246.0" prefHeight="108.0" prefWidth="628.0" promptText="About me" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
         <ListView fx:id="skillListView" layoutX="26.0" layoutY="393.0" prefHeight="179.0" prefWidth="671.0" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
         <Label fx:id="employeeName" alignment="CENTER" contentDisplay="CENTER" layoutX="36.0" layoutY="33.0" prefHeight="105.0" prefWidth="644.0" textFill="#949090">
             <font>
