--- a/src/main/resources/com/example/csc325/csc325/Stylesheet.css
+++ b/src/main/resources/com/example/csc325/csc325/Stylesheet.css
@@ -1,8 +1,10 @@
 /* Stylesheet.css */
-
+.separator{
+    -fx-background-color: black;
+}
 .job-listing{
-    -fx-background-color: rgba(8, 64, 104, 0.33); /* Light black background color for job listings */
     -fx-padding: 10px; /* Add some padding to separate content from the background */
+    -fx-background-color: #3567a2;
 }
 
 
