--- a/src/main/resources/com/example/csc325/csc325/employerProfile.fxml
+++ b/src/main/resources/com/example/csc325/csc325/employerProfile.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background_color" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.employerProfileController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background_color" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.employerProfileController">
 
     <children>
         <ImageView fitHeight="86.0" fitWidth="129.0" layoutX="46.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true">
@@ -18,19 +21,19 @@
                 <Image url="@profile.png" />
             </image>
         </ImageView>
-        <TextArea fx:id="about" layoutX="8.0" layoutY="251.0" prefHeight="195.0" prefWidth="628.0" promptText="About Company" style="-fx-border-color: white; -fx-prompt-text-fill: #bfdbf7; -fx-background-color: transparent;" />
+        <TextArea fx:id="about" layoutY="135.0" prefHeight="416.0" prefWidth="696.0" promptText="About Company" style="-fx-border-color: white; -fx-prompt-text-fill: #bfdbf7; -fx-background-color: transparent;" styleClass="anchor_pane" />
 <!--        <ListView fx:id="skillListView" layoutX="8.0" layoutY="411.0" prefHeight="161.0" prefWidth="696.0" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />-->
         <Label fx:id="companyName" alignment="CENTER" contentDisplay="CENTER" layoutX="45.0" layoutY="41.0" prefHeight="105.0" prefWidth="644.0" textFill="#949090">
             <font>
                 <Font size="36.0" />
             </font>
         </Label>
-        <Label fx:id="username" layoutX="74.0" layoutY="186.0" prefHeight="28.0" prefWidth="188.0" text="Email" textFill="#bfdbf7" />
-        <Label fx:id="phoneNumber" layoutX="338.0" layoutY="186.0" prefHeight="28.0" prefWidth="188.0" text="Phone Number" textFill="#bfdbf7" />
+        <Label fx:id="username" layoutX="31.0" layoutY="94.0" prefHeight="28.0" prefWidth="188.0" text="Email" textFill="#bfdbf7" />
+        <Label fx:id="phoneNumber" layoutX="260.0" layoutY="94.0" prefHeight="28.0" prefWidth="188.0" text="Phone Number" textFill="#bfdbf7" />
         <Label fx:id="lblErrorMsg" layoutX="46.0" layoutY="669.0" textFill="#eb0f0f" />
-        <Button fx:id="saveButton" layoutX="610.0" layoutY="589.0" mnemonicParsing="false" onAction="#saveProfile" text="Save" />
-        <Button fx:id="logOutBtn" layoutX="594.0" layoutY="656.0" mnemonicParsing="false" onAction="#logOutHandler" text="Log Out" />
-      <Button fx:id="postJobBtn" onAction="#postJob" layoutX="539.0" layoutY="590.0" mnemonicParsing="false" text="Post Job" />
+        <Button fx:id="saveButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#saveProfile" styleClass="nav_btn" text="Save" />
+        <Button fx:id="logOutBtn" layoutX="77.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOutHandler" styleClass="nav_btn" text="Log Out" />
+      <Button fx:id="postJobBtn" layoutX="569.0" layoutY="574.0" mnemonicParsing="false" onAction="#postJob" styleClass="nav_btn" text="Post Job" />
     </children>
     <stylesheets>
         <URL value="@colors.css" />
