--- a/src/main/resources/com/example/csc325/csc325/postJob.fxml
+++ b/src/main/resources/com/example/csc325/csc325/postJob.fxml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: ccd5ae;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.JobPostingController">
+<AnchorPane prefHeight="647.0" prefWidth="618.0" style="-fx-background-color: ccd5ae;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.JobPostingController">
     <children>
         <Label layoutX="238.0" layoutY="8.0" prefHeight="62.0" prefWidth="139.0" text="Post a job" textFill="#344e41">
             <font>
                 <Font size="20.0" />
             </font>
         </Label>
-        <TextField fx:id="jobTitle" layoutX="26.0" layoutY="93.0" promptText="Job Title" style="-fx-background-color: fefae0; -fx-prompt-text-fill: #344e41;" />
-        <TextField fx:id="jobLocation" layoutX="26.0" layoutY="155.0" promptText="Job Location" style="-fx-background-color: fefae0; -fx-prompt-text-fill: #344e41;" />
-        <TextField fx:id="salary" layoutX="26.0" layoutY="210.0" promptText="Salary" style="-fx-background-color: fefae0; -fx-prompt-text-fill: #344e41;" />
-        <TextField fx:id="keywords" layoutX="26.0" layoutY="270.0" promptText="Keywords" style="-fx-background-color: fefae0; -fx-prompt-text-fill: #344e41;" />
-        <TextArea fx:id="description" layoutX="265.0" layoutY="81.0" prefHeight="259.0" prefWidth="300.0" promptText="Job Description" style="-fx-background-color: fefae0; -fx-prompt-text-fill: #344e41;" />
-      <Button onAction="#onCancel" layoutX="26.0" layoutY="315.0" mnemonicParsing="false" text="Cancel" />
-      <Button onAction="#onPost" layoutX="131.0" layoutY="316.0" mnemonicParsing="false" text="Post" />
+        <TextField fx:id="jobTitle" layoutX="26.0" layoutY="131.0" promptText="Job Title" style="-fx-background-color: fefae0; -fx-prompt-text-fill: #344e41;" />
+        <TextField fx:id="jobLocation" layoutX="26.0" layoutY="206.0" promptText="Job Location" style="-fx-background-color: fefae0; -fx-prompt-text-fill: #344e41;" />
+        <TextField fx:id="salary" layoutX="26.0" layoutY="274.0" promptText="Salary" style="-fx-background-color: fefae0; -fx-prompt-text-fill: #344e41;" />
+        <TextField fx:id="keywords" layoutX="26.0" layoutY="344.0" promptText="Keywords" style="-fx-background-color: fefae0; -fx-prompt-text-fill: #344e41;" />
+        <TextArea fx:id="description" layoutX="292.0" layoutY="111.0" prefHeight="463.0" prefWidth="298.0" promptText="Job Description" style="-fx-background-color: fefae0; -fx-prompt-text-fill: #344e41;" />
+      <Button layoutX="106.0" layoutY="427.0" mnemonicParsing="false" onAction="#onCancel" style="-fx-background-color: #344e41;" text="Cancel" textFill="#ccd5ae" />
+      <Button layoutX="26.0" layoutY="427.0" mnemonicParsing="false" onAction="#onPost" style="-fx-background-color: #344e41;" text="Post" textFill="#ccd5ae" />
     </children>
 </AnchorPane>
