--- a/src/main/resources/com/example/csc325/csc325/Stylesheet.css
+++ b/src/main/resources/com/example/csc325/csc325/Stylesheet.css
@@ -1,9 +1,14 @@
 /* Stylesheet.css */
 .separator{
-    -fx-background-color: black;
+    -fx-background-color:  #3567a2;
 }
-.job-listing{
+.job-listing {
     -fx-padding: 10px; /* Add some padding to separate content from the background */
-    -fx-background-color: #3567a2;
+    -fx-background-color: white;
 }
+.button {
+    -fx-background-color: #3567a2;
+    -fx-text-fill: white;
+}
+
 
