--- a/src/main/resources/com/example/csc325/csc325/employerProfile.fxml
+++ b/src/main/resources/com/example/csc325/csc325/employerProfile.fxml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background_color" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.employerProfileController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #344e41;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.employerProfileController">
 
     <children>
         <ImageView fitHeight="86.0" fitWidth="129.0" layoutX="46.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true">
@@ -21,23 +21,23 @@
                 <Image url="@profile.png" />
             </image>
         </ImageView>
-        <TextArea fx:id="about" layoutY="135.0" prefHeight="416.0" prefWidth="696.0" promptText="About Company" style="-fx-border-color: white; -fx-prompt-text-fill: #bfdbf7; -fx-background-color: transparent;" styleClass="anchor_pane" />
+        <TextArea fx:id="about" layoutX="-8.0" layoutY="155.0" prefHeight="297.0" prefWidth="728.0" promptText="About Company" style="-fx-border-color: white; -fx-prompt-text-fill: ccd5ae; -fx-background-color: transparent;" styleClass="anchor_pane" />
 <!--        <ListView fx:id="skillListView" layoutX="8.0" layoutY="411.0" prefHeight="161.0" prefWidth="696.0" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />-->
-        <Label fx:id="companyName" alignment="CENTER" contentDisplay="CENTER" layoutX="45.0" layoutY="41.0" prefHeight="105.0" prefWidth="644.0" textFill="#949090">
+        <Label fx:id="companyName" alignment="CENTER" contentDisplay="CENTER" layoutX="124.0" layoutY="50.0" prefHeight="44.0" prefWidth="475.0" textFill="#ccd5ae">
             <font>
                 <Font size="36.0" />
             </font>
         </Label>
-        <Label fx:id="username" layoutX="31.0" layoutY="94.0" prefHeight="28.0" prefWidth="188.0" text="Email" textFill="#bfdbf7" />
-        <Label fx:id="phoneNumber" layoutX="260.0" layoutY="94.0" prefHeight="28.0" prefWidth="188.0" text="Phone Number" textFill="#bfdbf7" />
+        <Label fx:id="username" layoutX="112.0" layoutY="94.0" prefHeight="28.0" prefWidth="188.0" text="Email" textFill="#ccd5ae" />
+        <Label fx:id="phoneNumber" layoutX="469.0" layoutY="94.0" prefHeight="28.0" prefWidth="188.0" text="Phone Number" textFill="#ccd5ae" />
         <Label fx:id="lblErrorMsg" layoutX="46.0" layoutY="669.0" textFill="#eb0f0f" />
-        <Button fx:id="saveButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#saveProfile" styleClass="nav_btn" text="Save" />
-        <Button fx:id="logOutBtn" layoutX="77.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOutHandler" styleClass="nav_btn" text="Log Out" />
-      <Button fx:id="postJobBtn" layoutX="569.0" layoutY="574.0" mnemonicParsing="false" onAction="#postJob" styleClass="nav_btn" text="Post Job" />
+        <Button fx:id="saveButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#saveProfile" style="-fx-background-color: ccd5ae;" text="Save" />
+        <Button fx:id="logOutBtn" layoutX="77.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOutHandler" style="-fx-background-color: ccd5ae;" text="Log Out" />
+      <Button fx:id="postJobBtn" layoutX="562.0" layoutY="493.0" mnemonicParsing="false" onAction="#postJob" style="-fx-background-color: ccd5ae;" text="Post Job" />
+      <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0" prefHeight="28.0" prefWidth="708.0" styleClass="header" />
+      <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0" prefHeight="28.0" prefWidth="708.0" styleClass="header" />
+      <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0" prefHeight="28.0" prefWidth="708.0" styleClass="header" />
     </children>
-    <stylesheets>
-        <URL value="@colors.css" />
-    </stylesheets>
 
 
 </AnchorPane>
