--- a/src/main/resources/com/example/csc325/csc325/employerProfile.fxml
+++ b/src/main/resources/com/example/csc325/csc325/employerProfile.fxml
@@ -37,6 +37,20 @@
       <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0" prefHeight="28.0" prefWidth="708.0" styleClass="header" />
       <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0" prefHeight="28.0" prefWidth="708.0" styleClass="header" />
       <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0" prefHeight="28.0" prefWidth="708.0" styleClass="header" />
+      <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0" prefHeight="28.0" prefWidth="708.0" styleClass="header">
+         <children>
+            <Button onAction="#ProfileLoader" prefHeight="33.0" prefWidth="67.0">
+               <graphic>
+                  <ImageView fitHeight="50" fitWidth="50">
+                     <image>
+                        <Image url="@../../../../../../../../../Desktop/backArrow.jpeg" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+         </children>
+      </HBox>
+      <Button layoutX="478.0" layoutY="493.0" mnemonicParsing="false" style="-fx-background-color: ccd5ae;" text="Applicants" />
     </children>
 
 
