--- a/src/main/resources/com/example/csc325/csc325/employerProfile.fxml
+++ b/src/main/resources/com/example/csc325/csc325/employerProfile.fxml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.shape.Circle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #344e41;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.employerProfileController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #344e41;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.employerProfileController">
 
     <children>
-        <ImageView fitHeight="86.0" fitWidth="129.0" layoutX="46.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="86.0" fitWidth="129.0" layoutX="22.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
             <clip>
                 <Circle centerX="43.0" centerY="43.0" radius="43.0" />
             </clip>
             <image>
-                <Image url="@profile.png" />
+                <Image url="@defaultprofilepic.jpg" />
             </image>
         </ImageView>
         <TextArea fx:id="about" layoutX="-8.0" layoutY="155.0" prefHeight="297.0" prefWidth="728.0" promptText="About Company" style="-fx-border-color: white; -fx-prompt-text-fill: ccd5ae; -fx-background-color: transparent;" styleClass="anchor_pane" />
@@ -28,8 +24,8 @@
                 <Font size="36.0" />
             </font>
         </Label>
-        <Label fx:id="username" layoutX="112.0" layoutY="94.0" prefHeight="28.0" prefWidth="188.0" text="Email" textFill="#ccd5ae" />
-        <Label fx:id="phoneNumber" layoutX="469.0" layoutY="94.0" prefHeight="28.0" prefWidth="188.0" text="Phone Number" textFill="#ccd5ae" />
+        <Label fx:id="username" layoutX="152.0" layoutY="95.0" prefHeight="28.0" prefWidth="188.0" text="Email" textFill="#ccd5ae" />
+        <Label fx:id="phoneNumber" layoutX="468.0" layoutY="95.0" prefHeight="28.0" prefWidth="188.0" text="Phone Number" textFill="#ccd5ae" />
         <Label fx:id="lblErrorMsg" layoutX="46.0" layoutY="669.0" textFill="#eb0f0f" />
         <Button fx:id="saveButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#saveProfile" style="-fx-background-color: ccd5ae;" text="Save" />
         <Button fx:id="logOutBtn" layoutX="77.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOutHandler" style="-fx-background-color: ccd5ae;" text="Log Out" />
@@ -38,19 +34,8 @@
       <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0" prefHeight="28.0" prefWidth="708.0" styleClass="header" />
       <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0" prefHeight="28.0" prefWidth="708.0" styleClass="header" />
       <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0" prefHeight="28.0" prefWidth="708.0" styleClass="header">
-         <children>
-            <Button onAction="#applicantsPage" prefHeight="33.0" prefWidth="67.0">
-               <graphic>
-                  <ImageView fitHeight="50" fitWidth="50">
-                     <image>
-                        <Image url="@../../../../../../../../../Desktop/backArrow.jpeg" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-         </children>
       </HBox>
-      <Button layoutX="478.0" layoutY="493.0" mnemonicParsing="false" style="-fx-background-color: ccd5ae;" text="Applicants" />
+      <Button layoutX="478.0" layoutY="493.0" mnemonicParsing="false" onAction="#applicantsPage" style="-fx-background-color: ccd5ae;" text="Applicants" />
     </children>
 
 
